# osint-master

./: .env.example  .gitignore  AGENTS.md  AUTH_PLAN.md  PLAN.md  README.md  agents.md  devenv.nix  devenv.yaml  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  sample-investigation.json
.cursor/commands/: checks.md
app/: main.py
app/api/: __init__.py  documents.py  domains.py  email_addresses.py  findings.py  ip_addresses.py  organizations.py  persons.py  relationships.py  social_media_profiles.py  sources.py
app/db/: __init__.py  connection.py  queries.py
app/models/: __init__.py  base.py  document.py  domain.py  email_address.py  finding.py  ip_address.py  organization.py  person.py  relationship.py  social_media_profile.py  source.py
app/tasks/: __init__.py  whois.py
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  agents.md  osint_master_ingest.sqlite  pyproject.toml
backend/app/: __init__.py  config.py  main.py  observability.py
backend/app/api/: auth.py  deps.py
backend/app/api/routes/: auth.py  chat.py  enrich.py  entities.py  graph.py  ingest.py  investigations.py  notebook.py  schema.py
backend/app/core/: cleaning_service.py  entity_service.py  ftm_service.py  graph_service.py  ingest_service.py  investigation_service.py  notebook_service.py  storage_service.py  yente_service.py
backend/app/core/chat/: __init__.py  agent.py
backend/app/core/extraction/: __init__.py  document_service.py  extraction_service.py  workflow_service.py
backend/app/core/ingest/: base.py  ftm_json.py
backend/app/models/: enrich.py  entity.py  graph.py  ingest.py  investigation.py  notebook.py  schema.py
backend/tests/: test_auth.py  test_health.py  test_ingest_service.py  test_routes.py  test_storage_service_testcontainers.py
backend/tests/fixtures/: sec_excerpt_amazon_item13.txt  sec_excerpt_amazon_item13_entities.ndjson
docs/: architecture.md  backend.md  frontend.md  getting-started.md  index.md  operations.md  requirements.txt  roadmap.md  sources.md
docs/api/: openapi.md
docs/ideas/: chatbot-tooling-recommendations.md  ftm-stack-integration-candidates.md  investigation-graph-memory.md
docs/reference/: backend-python.md
docs/stylesheets/: extra.css
frontend/: .oxlintrc.json  AGENTS.md  Dockerfile  agents.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/ai-elements/: conversation.tsx  prompt-input.tsx
frontend/src/components/auth/: AuthTokenBridge.tsx  RequireAuth.tsx  config.ts
frontend/src/components/investigation/: EntityMap.tsx  InvestigationChatbot.tsx  NotebookCanvas.tsx
frontend/src/components/investigation/nodes/: EntityNode.tsx  NoteNode.tsx
frontend/src/components/layout/: ThemeToggle.tsx
frontend/src/components/ui/: button.tsx
frontend/src/routes/: home.tsx  investigation.tsx  root.tsx
openspec/: project.md
openspec/changes/setup-backend-infrastructure/: design.md  proposal.md  tasks.md
openspec/changes/setup-backend-infrastructure/specs/backend-api/: spec.md
openspec/changes/setup-backend-infrastructure/specs/data-models/: spec.md
openspec/changes/setup-backend-infrastructure/specs/falkordb-storage/: spec.md
scripts/: post-hook.sh  seed_data.py  serve_docs.sh
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_db_operations.py  test_entity_relationships.py
tests/unit/: test_models.py
