[project]
name = "osint-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "falkordb>=1.4.0",
  "fastapi[standard]>=0.128.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "python-whois>=0.9.6",
  "redis>=7.1.0",
  "uvicorn[standard]>=0.40.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D100", "D101", "D102", "D103", "PLR2004", "ANN001"]
"**/__init__.py" = ["D104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "testcontainers>=4.13.3",
  "ty>=0.0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
