[project]
name = "osint-master-backend"
version = "0.1.0"
description = "OSINT investigation platform backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "falkordb>=1.0.0",
  "python-multipart>=0.0.12",
  "boto3>=1.35.0",
  "kreuzberg>=4.2.0",
  "langextract>=1.1.1",
  "dbos>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
  "testcontainers>=4.9.2",
  "ruff>=0.8.0",
]

ftm = ["followthemoney>=3.7.0"]
ingestion = ["ftmq>=4.2.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "tests", "pyproject.toml", "README.md"]

[tool.ruff]
line-length = 100
target-version = "py312"
include = ["app/**/*.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=9.0.2", "testcontainers>=4.9.2"]
